--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
     <!-- Fontawesome -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
 
     <title>React App</title>
